Granular parameters added for POST and PUT
